[gd_scene load_steps=11 format=3 uid="uid://dhequcr6u6oy5"]

[ext_resource type="Script" path="res://Scene.gd" id="1_0bpy2"]
[ext_resource type="Texture2D" uid="uid://b8fnm0j5exlr" path="res://assets/textures/button_unpressed.png" id="1_iedkv"]
[ext_resource type="Texture2D" uid="uid://dt2r5on6gplyu" path="res://assets/textures/Mountains.jpg" id="2_5nqon"]
[ext_resource type="Texture2D" uid="uid://cs722ue2uhqvv" path="res://assets/textures/golden_button_unpressed.png" id="3_fde27"]
[ext_resource type="AudioStream" uid="uid://djk353at8tekg" path="res://assets/Sounds/uzi saying bite me cuz why not.mp3" id="3_tp78l"]
[ext_resource type="Script" path="res://Score_Manager.gd" id="3_yal45"]
[ext_resource type="Script" path="res://Milestone_Reached.gd" id="5_yfw75"]
[ext_resource type="Script" path="res://Congrats.gd" id="7_m3yii"]
[ext_resource type="Texture2D" uid="uid://iq33hmuaw3iv" path="res://assets/textures/Sunglasses.png" id="9_pyr0d"]
[ext_resource type="Script" path="res://Sunglasses_accessory.gd" id="10_iolax"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_0bpy2")

[node name="Mountains" type="Sprite2D" parent="."]
position = Vector2(582, 324.5)
scale = Vector2(0.601562, 0.59537)
texture = ExtResource("2_5nqon")

[node name="Score" type="Label" parent="."]
offset_left = 840.0
offset_right = 1017.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.466667, 0, 0.513726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
uppercase = true
script = ExtResource("3_yal45")

[node name="Milestone_Reached" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tp78l")
script = ExtResource("5_yfw75")

[node name="Gold Button" type="Button" parent="."]
offset_left = 59.0
offset_top = 70.0
offset_right = 660.0
offset_bottom = 560.0
icon = ExtResource("3_fde27")
flat = true

[node name="Congrats" type="Label" parent="."]
offset_left = 716.0
offset_top = 322.0
offset_right = 1105.0
offset_bottom = 497.0
theme_override_colors/font_color = Color(0, 0.678431, 0.14902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
vertical_alignment = 1
uppercase = true
script = ExtResource("7_m3yii")

[node name="First Button" type="Button" parent="."]
offset_left = 59.0
offset_top = 70.0
offset_right = 660.0
offset_bottom = 560.0
icon = ExtResource("1_iedkv")
flat = true

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 1060.0
offset_top = 599.0
offset_right = 1149.0
offset_bottom = 646.0
text = "Main Menu"
flat = true

[node name="Sunglasses" type="Sprite2D" parent="."]
position = Vector2(360, 216)
scale = Vector2(0.732044, 0.703319)
texture = ExtResource("9_pyr0d")
script = ExtResource("10_iolax")

[connection signal="finished" from="Milestone_Reached" to="Congrats" method="_on_skin_unlocked_finished"]
[connection signal="pressed" from="Gold Button" to="." method="_on_gold_button_pressed"]
[connection signal="pressed" from="First Button" to="." method="_on_first_button_pressed"]
[connection signal="pressed" from="First Button" to="Score" method="_on_first_button_pressed"]
[connection signal="pressed" from="First Button" to="Milestone_Reached" method="_on_first_button_pressed"]
[connection signal="pressed" from="First Button" to="Congrats" method="_on_first_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_button_pressed"]
[connection signal="hidden" from="Sunglasses" to="." method="_on_sunglasses_hidden"]
